--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -66,7 +66,12 @@ jobs:
           cd ${{ env.FOLDER }}
           CHANGED=$(git diff|wc -l)
           echo $CHANGED
-
+          if[ $CHANGED -ge 1 ];
+          then:
+            echo ::set-output name=status::success
+          else:
+            echo ::set-output name=status::failure
+          fi
       # - name: Run commit
       #   run: |
       #     cd ${{ env.FOLDER }}
