--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -72,23 +72,23 @@ jobs:
           else:
             echo ::set-output name=status::failure
           fi
-      # - name: Run commit
-      #   run: |
-      #     cd ${{ env.FOLDER }}
-      #     # set commiter identity
-      #     git config user.email "serhii.khylyk@gmail.com"
-      #     git config user.name "Serhii Khylyk"
-      #     # Commit the changes and push the feature branch to origin
-      #     git add .
-      #     git commit -m "update proto to ${{ env.LATEST_TAG }}"
-      #     git push origin ${{ env.BRANCH_NAME }}
-      # - name: make PR
-      #   run: |
-      #     cd ${{ env.FOLDER }}
-      #     echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
-      #     gh pr create \
-      #       --body "" \
-      #       --title "update proto to ${{ env.LATEST_TAG }}" \
-      #       --head "${{ env.BRANCH_NAME }}" \
-      #       --base "main" \
-      #       --assignee "ssh2003"
+      - name: Run commit
+        run: |
+          cd ${{ env.FOLDER }}
+          # set commiter identity
+          git config user.email "serhii.khylyk@gmail.com"
+          git config user.name "Serhii Khylyk"
+          # Commit the changes and push the feature branch to origin
+          git add .
+          git commit -m "update proto to ${{ env.LATEST_TAG }}"
+          git push origin ${{ env.BRANCH_NAME }}
+      - name: make PR
+        run: |
+          cd ${{ env.FOLDER }}
+          echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
+          gh pr create \
+            --body "" \
+            --title "update proto to ${{ env.LATEST_TAG }}" \
+            --head "${{ env.BRANCH_NAME }}" \
+            --base "main" \
+            --assignee "ssh2003"
