--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -62,6 +62,7 @@ jobs:
           ls -ls ../../../
           python3 /tmp/script.py .proto-sync.json
       - name: check diffs
+        id: diffs
         run: |
           cd ${{ env.FOLDER }}
           CHANGED=$(git diff|wc -l)
@@ -73,6 +74,7 @@ jobs:
             echo ::set-output name=status::failure
           fi
       - name: Run commit
+        if: ${{ steps.hello.diffs.status == 'success' }}
         run: |
           cd ${{ env.FOLDER }}
           # set commiter identity
@@ -83,6 +85,7 @@ jobs:
           git commit -m "update proto to ${{ env.LATEST_TAG }}"
           git push origin ${{ env.BRANCH_NAME }}
       - name: make PR
+        if: ${{ steps.hello.diffs.status == 'success' }}
         run: |
           cd ${{ env.FOLDER }}
           echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
