--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -9,14 +9,15 @@ on:
       - "**"
 name: proto-sync
 jobs:
-  sync-first-repo:
-    uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
-    secrets: inherit
-    with:
-      repo: "ssh2003/target-for-sync"
-
-  # sync-second-repo:
-  #   uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
-  #   secrets: inherit
-  #   with:
-  #     repo: "ssh2003/second-target-for-sync"
+  sync-repoa:
+    steps:
+      first:
+        uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
+        secrets: inherit
+        with:
+          repo: "ssh2003/target-for-sync"
+      second:
+        uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
+        secrets: inherit
+        with:
+          repo: "ssh2003/second-target-for-sync"
