--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -9,14 +9,11 @@ on:
       - "**"
 
 jobs:
-  strategy:
-    matrix:
-      repos: [ "ssh2003/target-for-sync", "ssh2003/second-target-to-sync" ]
   first:
     uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
     secrets: inherit
     with:
-      repo: ${{ matrix.repos }}
+      repo: ["ssh2003/target-to-sync", "ssh2003/second-target-to-sync"]
   # second:
   #   uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
   #   secrets: inherit
