--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -7,9 +7,12 @@ on:
       repo:
         description: Repository to sync
         required: true
-        type: string
+        type: matrix
 
 jobs:
+  strategy:
+    matrix:
+      repos: ${ inputs.repo }
   send-pull-requests:
     runs-on: ubuntu-latest
     steps:
@@ -23,14 +26,14 @@ jobs:
       - name: Setup env
         run: |
           echo "LATEST_TAG=$(git rev-parse --short=6 HEAD)" >> "$GITHUB_ENV"
-          echo "FOLDER=bin/${{ inputs.repo }}" >> "$GITHUB_ENV"
+          echo "FOLDER=bin/${{ matrix.repos }}" >> "$GITHUB_ENV"
       - name: Setup BRANCH_NAME
         run: |
           echo "BRANCH_NAME=update-proto-to-$LATEST_TAG" >> $GITHUB_ENV
       - name: clone target repo
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
         with:
-          repository: ${{ inputs.repo }}
+          repository: ${{ matrix.repos }}
           path: ${{ env.FOLDER }}
           token: ${{ secrets.GH_TOKEN }}
       - name: create new branch
