--- a/.github/workflows/on-proto-update.yml
+++ b/.github/workflows/on-proto-update.yml
@@ -7,14 +7,14 @@ on:
       repo:
         description: Repository to sync
         required: true
-        type: matrix
+        type: string
 
 jobs:
   send-pull-requests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        repos: ${ inputs.repo }
+        repos: ${{ fromJson(inputs.repo) }}
     steps:
       - name: Checkout code
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
