--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: get repos list
         run: echo ::set-output name=repos::$(cat .repos-for-proto-sync.txt)
   update-proto:
+    needs: get-repos-list
     uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
     secrets: inherit
     with:
