--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -11,6 +11,8 @@ on:
 jobs:
   get-repos-list:
     runs-on: ubuntu-latest
+    outputs:
+      repos: "steps.get-repos.outputs.repos"
     steps:
       - name: Checkout code
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
@@ -20,10 +22,12 @@ jobs:
           repository: ${{github.event.pull_request.head.repo.full_name}}
           token: ${{ secrets.GH_TOKEN }}
       - name: get repos list
+        id: get-repos
         run: echo ::set-output name=repos::$(cat .repos-for-proto-sync.txt)
   update-proto:
     needs: get-repos-list
     uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
     secrets: inherit
     with:
-      repo: "['ssh2003/target-for-sync', 'ssh2003/second-target-to-sync']"
+      repo: ${{ needs.get-repos-list.repos }}
+      #repo: "['ssh2003/target-for-sync', 'ssh2003/second-target-to-sync']"
