--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -29,7 +29,7 @@ jobs:
   test-gob-for-outputs:
     steps:
       - name: test-output
-        run-on: ubuntu-latest
+        runs-on: ubuntu-latest
         needs: get-repos-list
         run: echo ${{ needs.get-repos-list.repos }}
 
