--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -30,8 +30,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: get-repos-list
     steps:
+      - env:
+          REPOS: ${{ needs.get-repos-list.repos }}
       - name: test-output
-        run: echo ${{ needs.get-repos-list.repos }}
+        run: echo $REPOS
 
   # update-proto:
   #   needs: get-repos-list
