--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -31,7 +31,7 @@ jobs:
   get-repos-list:
     runs-on: ubuntu-latest
     outputs:
-      repos: ${{ steps.get-repos.outputs.repos }}
+      REPOS: ${{ steps.get-repos.outputs.repos }}
     steps:
       - name: Checkout code
         uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
