--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -46,14 +46,14 @@ jobs:
         run: echo "repos=one" >> "$GITHUB_OUTPUT"
       - name: show output
         run: echo ${{ steps.get-repos.outputs.repos }}
-  test-gob-for-outputs:
+  test-job-for-outputs:
     runs-on: ubuntu-latest
     needs: get-repos-list
     steps:
+      - env:
+          REPOS: "${{ needs.get-repos-list.repos }}"
       - name: test-output
         run: echo "${{ env.REPOS }}"
-        env:
-            REPOS: "${{ needs.get-repos-list.repos }}"
 
   # update-proto:
   #   needs: get-repos-list
