--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -9,7 +9,7 @@ on:
       - "**"
 
 jobs:
-  job1:
+  get-repos-list:
     runs-on: ubuntu-latest
     # Map a step output to a job output
     outputs:
@@ -26,36 +26,36 @@ jobs:
         run: echo "repos=$(cat .repos-for-proto-sync.txt)" >> "$GITHUB_OUTPUT"
   job2:
     runs-on: ubuntu-latest
-    needs: job1
+    needs: get-repos-list
     steps:
       - env:
           OUTPUT1: ${{needs.job1.outputs.output1}}
         run: echo "$OUTPUT1"
-  get-repos-list:
-    runs-on: ubuntu-latest
-    outputs:
-      REPOS: ${{ steps.get-repos.outputs.repos }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
-        with:
-          fetch-depth: 0
-          ref: ${{github.event.pull_request.head.ref}}
-          repository: ${{github.event.pull_request.head.repo.full_name}}
-          token: ${{ secrets.GH_TOKEN }}
-      - name: get repos list
-        id: get-repos
-        #run: echo ::set-output name=repos::$(cat .repos-for-proto-sync.txt)
-        run: echo "repos=one" >> "$GITHUB_OUTPUT"
-      - name: show output
-        run: echo ${{ steps.get-repos.outputs.repos }}
-  test-job-for-outputs:
-    runs-on: ubuntu-latest
-    needs: get-repos-list
-    steps:
-      - env:
-          REPOS: "${{ needs.get-repos-list.repos }}"
-        run: echo "${{ env.REPOS }}"
+  # get-repos-list:
+  #   runs-on: ubuntu-latest
+  #   outputs:
+  #     REPOS: ${{ steps.get-repos.outputs.repos }}
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
+  #       with:
+  #         fetch-depth: 0
+  #         ref: ${{github.event.pull_request.head.ref}}
+  #         repository: ${{github.event.pull_request.head.repo.full_name}}
+  #         token: ${{ secrets.GH_TOKEN }}
+  #     - name: get repos list
+  #       id: get-repos
+  #       #run: echo ::set-output name=repos::$(cat .repos-for-proto-sync.txt)
+  #       run: echo "repos=one" >> "$GITHUB_OUTPUT"
+  #     - name: show output
+  #       run: echo ${{ steps.get-repos.outputs.repos }}
+  # test-job-for-outputs:
+  #   runs-on: ubuntu-latest
+  #   needs: get-repos-list
+  #   steps:
+  #     - env:
+  #         REPOS: "${{ needs.get-repos-list.repos }}"
+  #       run: echo "${{ env.REPOS }}"
 
   # update-proto:
   #   needs: get-repos-list
