--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -29,7 +29,7 @@ jobs:
     needs: get-repos-list
     steps:
       - env:
-          OUTPUT1: ${{needs.job1.outputs.output1}}
+          OUTPUT1: ${{needs.get-repos-list.outputs.output1}}
         run: echo "$OUTPUT1"
   # get-repos-list:
   #   runs-on: ubuntu-latest
