--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -9,35 +9,10 @@ on:
       - "**"
 
 jobs:
-  get-repos-list:
-    runs-on: ubuntu-latest
-    # Map a step output to a job output
-    outputs:
-      output1: ${{ steps.step1.outputs.repos }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
-        with:
-          fetch-depth: 0
-          ref: ${{github.event.pull_request.head.ref}}
-          repository: ${{github.event.pull_request.head.repo.full_name}}
-          token: ${{ secrets.GH_TOKEN }}
-      - id: step1
-        run: echo "repos=$(cat .repos-for-proto-sync.txt)" >> "$GITHUB_OUTPUT"
-  job2:
-    runs-on: ubuntu-latest
-    needs: get-repos-list
-    steps:
-      - env:
-          OUTPUT1: ${{needs.get-repos-list.outputs.output1}}
-        run: echo "$OUTPUT1"
-
   update-proto:
     needs: get-repos-list
     uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
     secrets: inherit
     with:
-      env:
-          OUTPUT1: ${{needs.get-repos-list.outputs.output1}}
-      repo: ${{ env.OUTPUT1 }}
+      repo: ${{ env.REPOS_TO_SYNC }}
       #repo: "['ssh2003/target-for-sync', 'ssh2003/second-target-to-sync']"
