--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -13,5 +13,5 @@ jobs:
     uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
     secrets: inherit
     with:
-       repo: "${{ secrets.REPOS_TO_SYNC }}"
+       repo: ${{ secrets.GH_TOKEN }}
       #repo: "['ssh2003/target-for-sync', 'ssh2003/second-target-to-sync']"
