--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -7,14 +7,9 @@ on:
     tags-ignore:
       - "**"
 
-jobs:
-  test-env:
-    - name: test
-      run: echo ${{ vars.REPOS_TO_SYNC }}
-
-  # update-proto:
-  #   uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
-  #   secrets: inherit
-  #   with:
-  #      repo: ${{ secrets.GH_TOKEN }}
-  #     #repo: "['ssh2003/target-for-sync', 'ssh2003/second-target-to-sync']"
+  update-proto:
+    uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
+    secrets: inherit
+    with:
+       repo: ${{ vars.REPOS_TO_SYNC }}
+      #repo: "['ssh2003/target-for-sync', 'ssh2003/second-target-to-sync']"
