--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -6,7 +6,7 @@ on:
     paths: "**.proto"
     tags-ignore:
       - "**"
-
+jobs:
   update-proto:
     uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
     secrets: inherit
