--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -11,5 +11,5 @@ jobs:
     uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
     secrets: inherit
     with:
-       repo: ${{ vars.REPOS_TO_SYNC }}
-      #repo: "['ssh2003/target-for-sync', 'ssh2003/second-target-to-sync']"
+       #repo: ${{ vars.REPOS_TO_SYNC }}
+      repo: "['ssh2003/target-for-sync', 'ssh2003/second-target-to-sync']"
