--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -11,4 +11,4 @@ jobs:
     uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
     secrets: inherit
     with:
-       repo: "${{ vars.REPOS_TO_SYNC }}"
+       repo: "${{ toJson(vars.REPOS_TO_SYNC) }}"
