--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -7,6 +7,12 @@ on:
     tags-ignore:
       - "**"
 jobs:
+  test-vars:
+    steps:
+      name: vars
+      run: |
+        echo ${{ fromJson(vars.REPOS_TO_SYNC) }}
+        echo ${{ toJson(vars.REPOS_TO_SYNC) }}
   update-proto:
     uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
     secrets: inherit
