--- a/.github/workflows/on-push-proto.yaml
+++ b/.github/workflows/on-push-proto.yaml
@@ -18,5 +18,5 @@ jobs:
     uses: ssh2003/source-for-sync/.github/workflows/on-proto-update.yml@main
     secrets: inherit
     with:
-       #repo: "${{ toJson(vars.REPOS_TO_SYNC) }}"
-       repo: "['ssh2003/target-for-sync', 'ssh2003/second-target-to-sync']"
+       repo: "${{ toJson(vars.REPOS_TO_SYNC) }}"
+       #repo: "['ssh2003/target-for-sync', 'ssh2003/second-target-to-sync']"
